--- a/ios/FoodDeliveryApp/Info.plist
+++ b/ios/FoodDeliveryApp/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>CFBundleDisplayName</key>
+	<key>Food Delivery</key>
 	<string>Food Delivery</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
